[package]
name = "node-bench"
version = "0.8.0"
authors = ["Spanner Developers"]
description = "Substrate node integration benchmarks."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
node-primitives = { version = "2.0.0", path = "../primitives" }
node-testing = { version = "2.0.0", path = "../testing" }
spanner-runtime = { path = "../runtime/spanner" }
sc-cli = "0.9.0"
sc-client-api = "3.0.0"
sp-runtime = "3.0.0"
sp-state-machine = "0.9.0"
serde = "1.0.101"
serde_json = "1.0.41"
structopt = "0.3"
derive_more = "0.99.2"
kvdb = "0.9.0"
kvdb-rocksdb = "0.11.0"
sp-trie = "3.0.0"
sp-core = "3.0.0"
sp-consensus = "0.9.0"
sp-transaction-pool = "3.0.0"
sc-basic-authorship = "0.9.0"
sp-inherents = "3.0.0"
sp-timestamp = { version = "3.0.0", default-features = false }
sp-tracing = "3.0.0"
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
hex = "0.4.0"
rand = { version = "0.7.2", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
parity-db = { version = "0.2.2" }
sc-transaction-pool = { version = "3.0.0" }
futures = { version = "0.3.4", features = ["thread-pool"] }
