[package]
name = "node-cli"
version = "2.0.0"
authors = ["Spanner Developers"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "substrate"
homepage = "https://www.spanner.network/"
repository = ""

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "substrate"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = "3.0.0"
sp-consensus-babe = "0.9.0"
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa" }
sp-core = "3.0.0"
sp-runtime = "3.0.0"
sp-timestamp = "3.0.0"
sp-inherents = "3.0.0"
sp-keyring = "3.0.0"
sp-keystore = "0.9.0"
sp-io = "3.0.0"
sp-consensus = "0.9.0"
sp-transaction-pool = "3.0.0"
sp-api = "3.0.0"
sp-block-builder = "3.0.0"
sp-offchain = "3.0.0"
sp-session = "3.0.0"
sp-blockchain = "3.0.0"
sp-storage = "3.0.0"


# client dependencies
sc-client-api = "3.0.0"
sc-chain-spec = "3.0.0"
sc-consensus = "0.9.0"
sc-transaction-pool = "3.0.0"
sc-network = "0.9.0"
sc-consensus-slots = "0.9.0"
sc-consensus-babe = "0.9.0"
grandpa = { version = "0.9.0", package = "sc-finality-grandpa" }
sc-client-db = { version = "0.9.0", default-features = false }
sc-offchain = "3.0.0"
sc-rpc = "3.0.0"
sc-basic-authorship = "0.9.0"
sc-service = { version = "0.9.0", default-features = false }
sc-tracing = "3.0.0"
sc-telemetry = "3.0.0"
sc-authority-discovery = "0.9.0"
sc-finality-grandpa-warp-sync = { version = "0.8.0", path = "../client/finality-grandpa-warp-sync", optional = true }
sc-executor = "0.9.0"

# frame dependencies
pallet-indices = "3.0.0"
pallet-timestamp = { version = "3.0.0", default-features = false }
frame-system = "3.0.0"
pallet-balances = "3.0.0"
pallet-transaction-payment = "3.0.0"
frame-support = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-dex = { path = '../pallets/dex', default-features = false, version = '2.0.0' }
pallet-authority-discovery = "3.0.0"
pallet-staking = "3.0.0"
pallet-grandpa = "3.0.0"
frame-system-rpc-runtime-api = "3.0.0"
pallet-transaction-payment-rpc-runtime-api = "3.0.0"

# node-specific dependencies
spanner-runtime = { version = "2.0.0", path = "../runtime/spanner" }
hammer-runtime = { version = "2.0.0", path = "../runtime/hammer" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", optional = true, version = "0.9.0"}

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = "3.0.0"
sc-consensus = "0.9.0"
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"] }
sc-consensus-epochs = "0.9.0"
sc-service-test = { version = "2.0.0", path = "../client/service/test" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
regex = "1"
platforms = "1.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
substrate-build-script-utils = { version = "3.0.0", optional = true }
substrate-frame-cli = { version = "3.0.0", optional = true }

[build-dependencies.sc-cli]
version = "0.9.0"
package = "sc-cli"
optional = true

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"spanner-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
