[package]
name = "node-executor"
version = "2.0.0"
authors = ["Spanner Developers"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.spanner.network/"
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
node-primitives = { version = "2.0.0", path = "../primitives" }
spanner-runtime = { version = "2.0.0", path = "../runtime/spanner" }
sc-executor = "0.9.0"
sp-core = "3.0.0"
sp-keystore = "0.9.0"
sp-io = "3.0.0"
sp-state-machine = "0.9.0"
sp-trie = "3.0.0"
trie-root = "0.16.0"
frame-benchmarking = "3.0.0"

[dev-dependencies]
criterion = "0.3.0"
frame-support = "3.0.0"
frame-system = "3.0.0"
node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = "3.0.0"
pallet-grandpa = "3.0.0"
pallet-im-online = "3.0.0"
pallet-indices = "3.0.0"
pallet-session = "3.0.0"
pallet-timestamp = "3.0.0"
pallet-transaction-payment = "3.0.0"
pallet-treasury = "3.0.0"
sp-application-crypto = "3.0.0"
sp-runtime = "3.0.0"
sp-externalities = "0.9.0"
substrate-test-client = { version = "2.0.0", path = "../test-utils/client" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
