[package]
name = "substrate-test-utils"
version = "2.0.0"
authors = ["Spanner Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.spanner.network/"
repository = ""
description = "Substrate test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
substrate-test-utils-derive = "0.9.0"
tokio = { version = "0.2.13", features = ["macros"] }

[dev-dependencies]
sc-service = "0.9.0"
trybuild = { version = "1.0.38", features = ["diff"] }
