[package]
name = "node-testing"
version = "2.0.0"
authors = ["Spanner Developers"]
description = "Test utilities for Substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://www.spanner.network/"
repository = ""
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = "3.0.0"
sc-service = { version = "0.9.0", features = ["test-helpers", "db"] }
sc-client-db = { version = "0.9.0", features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = "3.0.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
pallet-grandpa = "3.0.0"
pallet-indices = "3.0.0"
sp-keyring = "3.0.0"
node-executor = { version = "2.0.0", path = "../executor" }
node-primitives = { version = "2.0.0", path = "../primitives" }
spanner-runtime = { version = "2.0.0", path = "../runtime/spanner" }
sp-core = "3.0.0"
sp-io = "3.0.0"
frame-support = "3.0.0"
pallet-session = "3.0.0"
pallet-society = "3.0.0"
sp-runtime = "3.0.0"
pallet-staking = "3.0.0"
sc-executor = { version = "0.9.0", features = ["wasmtime"] }
sp-consensus = "0.9.0"
frame-system = "3.0.0"
substrate-test-client = { version = "2.0.0", path = "../test-utils/client" }
pallet-timestamp = "3.0.0"
pallet-transaction-payment = "3.0.0"
pallet-treasury = "3.0.0"
sp-api = "3.0.0"
sp-timestamp = { version = "3.0.0", default-features = false }
sp-block-builder = "3.0.0"
sc-block-builder = "0.9.0"
sp-inherents = "3.0.0"
sp-blockchain = "3.0.0"
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = "0.9.0"
