[package]
authors = ['Spanner Developers']
description = 'Common shared helper functions'
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-common'
repository = ''
version = '2.0.0'

[dependencies]
impl-trait-for-tuples = "0.1.3"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "sp-std/std",
]
