[package]
authors = ['Spanner Developers']
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-support'
readme = "README.md"
repository = ''
version = '2.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }

[features]
default = ["std"]
std = [
    'serde',
    "codec/std",
    "sp-std/std",
    'sp-runtime/std',
]
