[package]
authors = ['Spanner Developers']
description = 'Voting Pallet'
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-voting'
repository = ''
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { version = "2.0.0", features = ["derive"], default-features = false }

# Substrate packages
serde = { version = "1.0.101", optional = true }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
primitives = { package = "node-primitives", path = "../../primitives", default-features = false }
pallet-bullet-train-primitives = { version = "2.0.0", default-features = false, path = "../bullet-train/common" }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }

[dev-dependencies]
sp-io = { version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-core/std',
    'sp-runtime/std',
    'primitives/std',
    "pallet-bullet-train-primitives/std",
]
