[package]
authors = ['Spanner Developers']
description = 'Voting Pallet'
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-voting'
repository = ''
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { version = "2.0.0", features = ["derive"], default-features = false }

# Substrate packages
serde = { version = "1.0.101", optional = true }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
primitives = { package = "node-primitives", path = "../../primitives", default-features = false }
pallet-support = { version = "2.0.0", default-features = false, path = "../support" }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
log = { version = "0.4.14", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
    'serde',
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-runtime/std',
    "sp-std/std",
    "sp-io/std",
    'primitives/std',
    "pallet-support/std",
    "log/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
]
