[package]
name = "substrate-test-client"
version = "2.0.0"
authors = ["Spanner Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.spanner.network/"
repository = ""
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures01 = { package = "futures", version = "0.1.29" }
hash-db = "0.15.2"
hex = "0.4"
serde = "1.0.55"
serde_json = "1.0.55"
sc-client-api = "3.0.0"
sc-client-db = { version = "0.9.0", features = ["test-helpers"] }
sc-consensus = "0.9.0"
sc-executor = "0.9.0"
sc-light = "3.0.0"
sc-service = { version = "0.9.0", default-features = false, features = ["test-helpers"] }
sp-blockchain = "3.0.0"
sp-consensus = "0.9.0"
sp-core = "3.0.0"
sp-keystore = "0.9.0"
sp-keyring = "3.0.0"
sp-runtime = "3.0.0"
sp-state-machine = "0.9.0"
