[package]
name = "sc-service-test"
version = "2.0.0"
authors = ["Spanner Developers"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
homepage = "https://www.spanner.network/"
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.3.1"
tempfile = "3.1.0"
tokio = "0.1.22"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
fdlimit = "0.2.1"
parking_lot = "0.11.1"
sc-light = "3.0.0"
sp-blockchain = "3.0.0"
sp-api = "3.0.0"
sp-state-machine = "0.9.0"
sp-externalities = "0.9.0"
sp-trie = "3.0.0"
sp-storage = "3.0.0"
sc-client-db = { version = "0.9.0", default-features = false }
futures = { version = "0.3.1", features = ["compat"] }
sc-service = { version = "0.9.0", default-features = false, features = ["test-helpers"] }
sc-network = "0.9.0"
sp-consensus = "0.9.0"
sp-runtime = "3.0.0"
sp-core = "3.0.0"
sp-transaction-pool = "3.0.0"
substrate-test-runtime = { version = "2.0.0", path = "../../../test-utils/runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sc-client-api = "3.0.0"
sc-block-builder = "0.9.0"
sc-executor = "0.9.0"
sp-panic-handler = "3.0.0"
parity-scale-codec = "2.0.0"
sp-tracing = "3.0.0"
