[package]
authors = ['Spanner Developers']
description = 'Node-specific RPC methods for interaction with bullet-train.'
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-bullet-train-primitives'
readme = "README.md"
repository = ''
version = '2.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
]
