[package]
authors = ['Spanner Developers']
description = 'Node-specific RPC methods for interaction with bullet-train.'
edition = '2018'
homepage = 'https://www.spanner.network/'
license = 'Unlicense'
name = 'pallet-bullet-train-rpc'
readme = "README.md"
repository = ''
version = '2.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
sp-blockchain = "3.0.0"
sp-core = "3.0.0"
sp-rpc = "3.0.0"
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = "3.0.0"
sp-api = "3.0.0"
sp-std = { version = "3.0.0", default-features = false }
pallet-bullet-train-rpc-runtime-api = { path = "runtime-api" }
pallet-bullet-train-primitives = { version = "2.0.0", default-features = false, path = "../common" }

[dev-dependencies]
serde_json = "1.0.41"
