[package]
name = "substrate-test-runtime-client"
version = "2.0.0"
authors = ["Spanner Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.spanner.network/"
repository = ""
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-light = "3.0.0"
sp-consensus = "0.9.0"
sc-block-builder = "0.9.0"
substrate-test-client = { version = "2.0.0", path = "../../client" }
sp-core = "3.0.0"
substrate-test-runtime = { version = "2.0.0", path = "../../runtime" }
sp-runtime = "3.0.0"
sp-api = "3.0.0"
sp-blockchain = "3.0.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-client-api = "3.0.0"
sc-consensus = "0.9.0"
sc-service = { version = "0.9.0", default-features = false }
futures = "0.3.9"
