[package]
name = "substrate-test-runtime-transaction-pool"
version = "2.0.0"
authors = ["Spanner Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.spanner.network/"
repository = ""
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../client" }
parking_lot = "0.11.1"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-blockchain = "3.0.0"
sp-runtime = "3.0.0"
sp-transaction-pool = "3.0.0"
sc-transaction-graph = "3.0.0"
futures = { version = "0.3.1", features = ["compat"] }
derive_more = "0.99.2"
